--- a/form-html/index.html
+++ b/form-html/index.html
@@ -1,6 +1,8 @@
 <html lang="pl">
 <head>
-
+    <title>Praca na lekcji</title>
+    <link rel="icon" type="image/x-icon" href="favicon.gif">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <form id="form" method="post">
