--- a/form-html/index.html
+++ b/form-html/index.html
@@ -1,13 +1,19 @@
 <html lang="pl">
 <head>
-
+    <title> Plan lekcji </title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.gif" type="image/gif">
+    
 </head>
 <body>
+   
+
     <form id="form" method="post">
         <div class="form-control">
             <label for="identyfikator-elementu" id="etykieta-elementu">
-                Element
+                <title>praca na lekcji</title>
             </label>
+            
 
             <input type="text" id="identyfikator-elementu" name="nazwa-pola" placeholder="Podaj wartość pola" />
         </div>
