praca na lekcji

--- a/form-html/index.html
+++ b/form-html/index.html
@@ -1,6 +1,9 @@
 <html lang="pl">
 <head>
-
+   <title> Praca na lekcji </title>
+   <link rel="stylesheet" href="styles.css">
+   <link rel="icon" href="favicon.gif" type="image/gif">
+   <form action="https://form.alo-nurt.pl/add" method="post" target="_blank"></form>
 </head>
 <body>
     <form id="form" method="post">
