--- a/form-html/index.html
+++ b/form-html/index.html
@@ -1,6 +1,7 @@
 <html lang="pl">
 <head>
 
+
 </head>
 <body>
     <form id="form" method="post">
@@ -18,3 +19,10 @@
     <a>Lista uczniów</a>
 </body>
 </html>
+
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+</html>
+
