--- a/form-html/index.html
+++ b/form-html/index.html
@@ -1,5 +1,8 @@
 <html lang="pl">
-<head>
+<head> 
+    <title> Praca na lekcji </title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.gif" type="image/gif">
 
 </head>
 <body>
