--- a/form-html/index.html
+++ b/form-html/index.html
@@ -1,5 +1,8 @@
 <html lang="pl">
 <head>
+    <title></title><praca na lekcji></praca>
+    <link rel="stylesheet" href=""styles.css">
+
 
 </head>
 <body>
