praca na lekcji

--- a/form-html/index.html
+++ b/form-html/index.html
@@ -1,8 +1,11 @@
 <html lang="pl">
-<head>
+<head> 
+    <title>Praca na lekcji</title>
+    <link rel=""stylesheet" href=""styles.css">
+    <link rel="icon" href="favicon.gif" type="image/gif">
 
 </head>
-<body>
+<body
     <form id="form" method="post">
         <div class="form-control">
             <label for="identyfikator-elementu" id="etykieta-elementu">
