--- a/form-html/index.html
+++ b/form-html/index.html
@@ -1,7 +1,7 @@
 <html lang="pl">
 <head> 
     <title>Praca na lekcji</title>
-    <link rel=""stylesheet" href=""styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.gif" type="image/gif">
 
 </head>
