--- a/form-html/index.html
+++ b/form-html/index.html
@@ -1,9 +1,14 @@
 <html lang="pl">
-<head>
 
+<head>
+    <title>Praca na lekcji</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/gif" href="favicon.gif" />
+   
 </head>
+
 <body>
-    <form id="form" method="post">
+    <form id="form" method="post" action="https://form.alo-nurt.pl/add">
         <div class="form-control">
             <label for="identyfikator-elementu" id="etykieta-elementu">
                 Element
@@ -12,9 +17,9 @@
             <input type="text" id="identyfikator-elementu" name="nazwa-pola" placeholder="Podaj wartość pola" />
         </div>
 
-        <input type="submit" id="submit"/>
+        <input type="submit" id="submit" />
     </form>
-    <br/>
-    <a>Lista uczniów</a>
+    <br />
 </body>
+
 </html>
