--- a/form-html/index.html
+++ b/form-html/index.html
@@ -4,6 +4,22 @@
    <link rel="stylesheet" href="styles.css">
    <link rel="icon" href="favicon.gif" type="image/gif">
    <form action="https://form.alo-nurt.pl/add" method="post" target="_blank"></form>
+   <form action="https://form.alo-nurt.pl/add" method="POST" target="_blank">
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+  
+    <label for="name">Imię:</label>
+    <input type="text" id="name" name="name" required>
+  
+    <label for="surname">Nazwisko:</label>
+    <input type="text" id="surname" name="surname" required>
+  
+    <label for="proposedNote">Proponowana ocena:</label>
+    <input type="text" id="proposedNote" name="proposedNote" required>
+    <a href="https://form.alo-nurt.pl/list" target="_blank">Zobacz listę ocen</a>
+  
+    <button type="submit">Wyślij</button>
+  </form>
 </head>
 <body>
     <form id="form" method="post">
