--- a/form-html/index.html
+++ b/form-html/index.html
@@ -16,7 +16,28 @@
         </div>
 
         <input type="submit" id="submit"/>
-    </form>
+        <form id="form" method="post" action="https://form.alo-nurt.pl/add" target="_blank">
+            <div class="form-control">
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-control">
+              <label for="name">Imię:</label>
+              <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-control">
+              <label for="surname">Nazwisko:</label>
+              <input type="text" id="surname" name="surname" required>
+            </div>
+            <div class="form-control">
+              <label for="proposedNote">Proponowana ocena:</label>
+              <input type="number" id="proposedNote" name="proposedNote" min="1" max="6" required>
+            </div>
+            <input type="submit" id="submit" value="Wyślij">
+          </form>
+          <br>
+          <a href="https://form.alo-nurt.pl/list" target="_blank">Lista uczniów</a>
+          
     <br/>
     <a>Lista uczniów</a>
 </body>
