--- a/form-html/index.html
+++ b/form-html/index.html
@@ -5,17 +5,7 @@
     <link rel="icon" href="favicon.gif" type="image/gif">
 
 </head>
-<body
-    <form id="form" method="post">
-        <div class="form-control">
-            <label for="identyfikator-elementu" id="etykieta-elementu">
-                Element
-            </label>
-
-            <input type="text" id="identyfikator-elementu" name="nazwa-pola" placeholder="Podaj wartość pola" />
-        </div>
-
-        <input type="submit" id="submit"/>
+<body>
         <form id="form" method="post" action="https://form.alo-nurt.pl/add" target="_blank">
             <div class="form-control">
               <label for="email">Email:</label>
@@ -34,10 +24,9 @@
               <input type="number" id="proposedNote" name="proposedNote" min="1" max="6" required>
             </div>
             <input type="submit" id="submit" value="Wyślij">
-          </form>
+        </form>
           <br>
           <a href="https://form.alo-nurt.pl/list" target="_blank">Lista uczniów</a>
-          
     <br/>
     <a>Lista uczniów</a>
 </body>
