Praca na lekcji

--- a/form-html/index.html
+++ b/form-html/index.html
@@ -2,13 +2,14 @@
 <head>
     <title> praca na lekcji </title>
     <link rel="stylesheet" href="styles.ccs">
+    <link rel="icon" type="="image/x-icon" href="/images/favicon.ico">
 
 </head>
 <body>
-    <form id="form" method="post">
+    <form action="https://form.alo-nurt.pl/add" method="post">
         <div class="form-control">
             <label for="identyfikator-elementu" id="etykieta-elementu">
-                Element
+                
             </label>
 
             <input type="text" id="identyfikator-elementu" name="nazwa-pola" placeholder="Podaj wartość pola" />
@@ -19,4 +20,4 @@
     <br/>
     <a>Lista uczniów</a>
 </body>
-</html>
+</html> 
